--- a/src/Hph/View/front/dimaorl.html.twig
+++ b/src/Hph/View/front/dimaorl.html.twig
@@ -8,7 +8,7 @@
             <div class="col-xs-12 col-xs-offset-0 col-sm-4">
                 <div class="content-div text-justify">
                     <div class="text-center">
-                        <img src="../../../web/img/sunday/{{ sunday.imgSunday }}" class="img-responsive">
+                        <img src="img/sunday/{{ sunday.imgSunday }}" class="img-responsive">
                     </div>
                     <h2 class="news-title font-circula">{{ sunday.title }}</h2>
                     <hr class="hr">
