--- a/src/Hph/View/front/news.html.twig
+++ b/src/Hph/View/front/news.html.twig
@@ -8,9 +8,9 @@
                 <div class="col-xs-12 col-xs-offset-0 col-sm-4">
                     <div class="content-div text-justify">
                         <div class="text-center">
-                            <img src="../../../web/img/news/{{ news.imgNews }}" class="img-responsive">
+                            <img src="img/news/{{ news.imgNews }}" class="img-responsive">
                         </div>
-                        <a href="../../../../index.php?page=newsOne&id={{ news.id }}" class="news-link"><h2 class="font-circula">{{ news.title }}</h2></a>
+                        <a href="index.php?page=newsOne&id={{ news.id }}" class="news-link"><h2 class="font-circula">{{ news.title }}</h2></a>
                         <hr class="hr">
                         <p>{{ news.text }}</p>
                     </div>
