--- a/src/Hph/View/front/newsOne.html.twig
+++ b/src/Hph/View/front/newsOne.html.twig
@@ -8,7 +8,7 @@
                 <div class="col-xs-12 col-xs-offset-0 col-sm-4 col-sm-offset-4">
                     <div class="content-div text-justify">
                         <div class="text-center">
-                            <img src="../../../web/img/news/{{ news.imgNews }}" class="img-responsive">
+                            <img src="img/news/{{ news.imgNews }}" class="img-responsive">
                         </div>
                         <h2 class="font-circula">{{ news.title }}</h2>
                         <hr class="hr">
