--- a/src/Hph/View/front/place.html.twig
+++ b/src/Hph/View/front/place.html.twig
@@ -10,7 +10,7 @@
                     <div class="col-xs-6 col-sm-4">
                         <div class="thumbnail thumbnail-div">
                             <a href="{{ place.url }}">
-                                <img src="/web/img/place/{{ place.imgPlace }}" class="img-responsive">
+                                <img src="img/place/{{ place.imgPlace }}" class="img-responsive">
                                 <h3 class="thumbnail-title font-circula">{{ place.name }}</h3>
                             </a>
                         </div>
@@ -26,7 +26,7 @@
                     <div class="col-xs-6 col-sm-4">
                         <div class="thumbnail thumbnail-div">
                             <a href="{{ place.url }}">
-                                <img src="../../../web/img/place/{{ place.imgPlace }}" class="img-responsive">
+                                <img src="img/place/{{ place.imgPlace }}" class="img-responsive">
                                 <h3 class="thumbnail-title font-circula">{{ place.name }}</h3>
                             </a>
                         </div>
