--- a/src/Hph/View/back/home.html.twig
+++ b/src/Hph/View/back/home.html.twig
@@ -5,7 +5,7 @@
         <div class="jumbotron">
             <h1>Bienvenue sur la page d'administration du site Hop Pop Hop</h1>
             <p>Vous pouvez administrer les artistes, lieux, concerts, actualités, foodtrucks, activités du dimanche et partenaires du site</p>
-            <p><a class="btn btn-primary btn-lg" href=".././../../../index.php" role="button">Retourner au site</a></p>
+            <p><a class="btn btn-primary btn-lg" href="../../../../web/index.php" role="button">Retourner au site</a></p>
         </div>
     </div>
 {% endblock %}
