--- a/src/Hph/View/front/base.html.twig
+++ b/src/Hph/View/front/base.html.twig
@@ -8,16 +8,16 @@
     <title>{% block title %}{% endblock %}</title>
     <!-- Bootstrap -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="../../../../web/font-awesome/css/font-awesome.min.css">
-    <link href="../../../../web/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../../../../web/css/style.css" rel="stylesheet">
-    <link href="../../../../web/img/global/logo-min.png" rel="icon">
+    <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
+    <link href="img/global/logo-min.png" rel="icon">
 </head>
 <body>
 <nav class="navbar navbar-inverse navbar-fixed-top" id="navbar">
     <div class="container-fluid">
         <div class="navbar-header text-center">
-            <a href="../../../../index.php"><img src="../../../../web/img/global/logo-min.png" class="navbar-brand"></a>
+            <a href="index.php"><img src="img/global/logo-min.png" class="navbar-brand"></a>
             <button type="button" class="navbar-toggle collapsed navbar-burger" data-toggle="collapse" data-target="#navbar-collapsed" aria-expanded="false">
                 <span class="sr-only">Menu</span>
                 <span class="icon-bar"></span>
@@ -31,30 +31,30 @@
                 <li>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Programmation <span class="caret"></span></a>
                     <ul class="dropdown-menu navbar-dropdown">
-                        <li><a href="../../../../index.php?page=programmation">Artistes</a></li>
-                        <li><a href="../../../../index.php?page=planning">Planning</a></li>
+                        <li><a href="index.php?page=programmation">Artistes</a></li>
+                        <li><a href="index.php?page=planning">Planning</a></li>
                     </ul>
                 </li>
                 <!-- class active -->
-                <li><a href="../../../../index.php?page=ticket">Billetterie</a></li>
-                <li><a href="../../../../index.php?page=cashless">Cashless</a></li>
+                <li><a href="index.php?page=ticket">Billetterie</a></li>
+                <li><a href="index.php?page=cashless">Cashless</a></li>
                 <li>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">La vie au festival <span class="caret"></span></a>
                     <ul class="dropdown-menu navbar-dropdown">
-                        <li><a href="../../../../index.php?page=food">Se restaurer</a></li>
-                        <li><a href="../../../../index.php?page=place" id="placeLink">Lieux</a></li>
+                        <li><a href="index.php?page=food">Se restaurer</a></li>
+                        <li><a href="index.php?page=place" id="placeLink">Lieux</a></li>
                     </ul>
                 </li>
                 <li>
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Infos Pratiques <span class="caret"></span></a>
                     <ul class="dropdown-menu navbar-dropdown">
-                        <li><a href="../../../../index.php?page=volunteer">Bénévolat</a></li>
-                        <li><a href="../../../../index.php?page=transport">Comment venir</a></li>
-                        <li><a href="../../../../index.php?page=dimaorl">Dimanche à Orléans</a></li>
+                        <li><a href="index.php?page=volunteer">Bénévolat</a></li>
+                        <li><a href="index.php?page=transport">Comment venir</a></li>
+                        <li><a href="index.php?page=dimaorl">Dimanche à Orléans</a></li>
                     </ul>
                 </li>
-                <li><a href="../../../../index.php?page=partner">Partenaires</a></li>
-                <li><a href="../../../../index.php?page=contact">Contact</a></li>
+                <li><a href="index.php?page=partner">Partenaires</a></li>
+                <li><a href="index.php?page=contact">Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right social hidden-xs">
                 <li><a href="#"><i class="fa fa-facebook-square navbar-logo" aria-hidden="true"></i></a></li>
@@ -78,7 +78,7 @@
                     {% if partner.footer == 1 %}
                         <div class="col-md-4 col-xs-4">
                             <a href="{{ partner.url }}" class="thumbnail thumbnail-div">
-                                <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
+                                <img src="img/partner/{{ partner.imgPartner }}" class="img-responsive">
                             </a>
                         </div>
                     {% endif %}
@@ -168,8 +168,8 @@
         </div>
     </div>
 </div>
-<script src="../../../../web/js/jquery-3.1.1.min.js"></script>
-<script src="../../../../web/bootstrap/js/bootstrap.min.js"></script>
-<script src="../../../../web/js/script.js"></script>
+<script src="js/jquery-3.1.1.min.js"></script>
+<script src="bootstrap/js/bootstrap.min.js"></script>
+<script src="js/script.js"></script>
 </body>
 </html>
