--- a/src/Hph/View/front/partner.html.twig
+++ b/src/Hph/View/front/partner.html.twig
@@ -9,7 +9,7 @@
                 {% if partner.type == 'culturel' %}
                     <div class="col-md-4 col-xs-4">
                         <a href="{{ partner.url }}" class="thumbnail thumbnail-div partnair-logo">
-                            <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
+                            <img src="img/partner/{{ partner.imgPartner }}" class="img-responsive">
                         </a>
                     </div>
                 {% endif %}
@@ -22,7 +22,7 @@
                 {% if partner.type == 'institutionnels' %}
                     <div class="col-md-4 col-xs-4">
                         <a href="{{ partner.url }}" class="thumbnail thumbnail-div partnair-logo">
-                            <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
+                            <img src="img/partner/{{ partner.imgPartner }}" class="img-responsive">
                         </a>
                     </div>
                 {% endif %}
@@ -35,7 +35,7 @@
                 {% if partner.type == 'média' %}
                     <div class="col-md-4 col-xs-4">
                         <a href="{{ partner.url }}" class="thumbnail thumbnail-div partnair-logo">
-                            <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
+                            <img src="img/partner/{{ partner.imgPartner }}" class="img-responsive">
                         </a>
                     </div>
                 {% endif %}
@@ -48,7 +48,7 @@
                 {% if partner.type == 'privé' %}
                     <div class="col-md-4 col-xs-4">
                         <a href="{{ partner.url }}" class="thumbnail thumbnail-div partnair-logo">
-                            <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
+                            <img src="img/partner/{{ partner.imgPartner }}" class="img-responsive">
                         </a>
                     </div>
                 {% endif %}
@@ -56,7 +56,7 @@
         </div>
         <hr class="hr">
         <div class="text-center">
-            <a href="../../../../index.php?page=contact"><button class="btn btn-primary partnair-btn">Devenez Partenaire</button></a>
+            <a href="index.php?page=contact"><button class="btn btn-primary partnair-btn">Devenez Partenaire</button></a>
         </div>
     </div>
 {% endblock %}
