--- a/src/Hph/View/front/volunteer.html.twig
+++ b/src/Hph/View/front/volunteer.html.twig
@@ -52,7 +52,7 @@
                 </div>
             </div>
             <div class="text-center">
-                <a href="../../../../index.php?page=contact"><button class="btn btn-primary contact-btn volunteer-btn">Devenez Bénévole</button></a>
+                <a href="index.php?page=contact"><button class="btn btn-primary contact-btn volunteer-btn">Devenez Bénévole</button></a>
             </div>
         </div>
     </div>
