--- a/src/Hph/View/front/contact.html.twig
+++ b/src/Hph/View/front/contact.html.twig
@@ -14,7 +14,7 @@
                         <p>Une erreur a eu lieu lors de l'envoi de votre message</p>
                     </div>
                 {% endif %}
-                <form method="POST" action="index.php?page=mail">
+                <form method="POST" action="/mail">
                     <h1 class="orange font-circula text-center">Nous contacter</h1>
                     <div class="form-group">
                         <label for="name" class="white">Votre nom</label>
