--- a/src/Hph/View/front/news.html.twig
+++ b/src/Hph/View/front/news.html.twig
@@ -10,7 +10,7 @@
                         <div class="text-center">
                             <img src="img/news/{{ news.imgNews }}" class="img-responsive">
                         </div>
-                        <a href="index.php?page=newsOne&id={{ news.id }}" class="news-link"><h2 class="font-circula">{{ news.title }}</h2></a>
+                        <a href="/newsOne/{{ news.id }}" class="news-link"><h2 class="font-circula">{{ news.title }}</h2></a>
                         <hr class="hr">
                         <p>{{ news.text }}</p>
                     </div>
