--- a/src/Hph/View/back/base.html.twig
+++ b/src/Hph/View/back/base.html.twig
@@ -8,17 +8,17 @@
     <title>{% block title %}{% endblock %}</title>
     <!-- Bootstrap -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="../../../../web/font-awesome/css/font-awesome.min.css">
-    <link href="../../../../web/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../../../../web/css/admin.css" rel="stylesheet">
-    <link href="../../../../web/img/global/logo-min.png" rel="icon">
+    <link rel="stylesheet" href="../web/font-awesome/css/font-awesome.min.css">
+    <link href="../web/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../web/css/admin.css" rel="stylesheet">
+    <link href="../web/img/global/logo-min.png" rel="icon">
 
 </head>
 <body>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header text-center">
-            <a href="../../../../admin/admin.php"><img src="../../../../web/img/global/logo-min.png" class="navbar-brand"></a>
+            <a href="admin.php"><img src="../web/img/global/logo-min.png" class="navbar-brand"></a>
             <button type="button" class="navbar-toggle collapsed navbar-burger" data-toggle="collapse" data-target="#navbar-collapsed" aria-expanded="false">
                 <span class="sr-only">Menu</span>
                 <span class="icon-bar"></span>
@@ -28,13 +28,13 @@
         </div>
         <div class="collapse navbar-collapse navbar-menu" id="navbar-collapsed">
             <ul class="nav navbar-nav navbar-list">
-                <li><a href="../../../../admin/admin.php?page=artist">Gestion des artistes</a></li>
-                <li><a href="../../../../admin/admin.php?page=place">Gestion des lieux</a></li>
-                <li><a href="../../../../admin/admin.php?page=concert">Gestion des concerts</a></li>
-                <li><a href="../../../../admin/admin.php?page=news">Gestion des actualités</a></li>
-                <li><a href="../../../../admin/admin.php?page=food">Gestion des foodtrucks</a></li>
-                <li><a href="../../../../admin/admin.php?page=partner">Gestion des partenaires</a></li>
-                <li><a href="../../../../admin/admin.php?page=sunday">Gestion des activités</a></li>
+                <li><a href="admin.php?page=artist">Gestion des artistes</a></li>
+                <li><a href="admin.php?page=place">Gestion des lieux</a></li>
+                <li><a href="admin.php?page=concert">Gestion des concerts</a></li>
+                <li><a href="admin.php?page=news">Gestion des actualités</a></li>
+                <li><a href="admin.php?page=food">Gestion des foodtrucks</a></li>
+                <li><a href="admin.php?page=partner">Gestion des partenaires</a></li>
+                <li><a href="admin.php?page=sunday">Gestion des activités</a></li>
             </ul>
         </div>
     </div>
@@ -42,8 +42,8 @@
 {% block content %}
 
 {% endblock %}
-<script src="../../../../web/js/jquery-3.1.1.min.js"></script>
-<script src="../../../../web/bootstrap/js/bootstrap.min.js"></script>
-<script src="../../../../web/js/script.js"></script>
+<script src="../web/js/jquery-3.1.1.min.js"></script>
+<script src="../web/bootstrap/js/bootstrap.min.js"></script>
+<script src="../web/js/script.js"></script>
 </body>
 </html>
