--- a/src/Hph/View/back/place.html.twig
+++ b/src/Hph/View/back/place.html.twig
@@ -12,7 +12,7 @@
                 <h2 class="text-center">Ajouter un lieu</h2>
                 <hr/>
                 {% include 'formInfo.html.twig' %}
-                <form method="POST" action="../../../../admin/admin.php?page=addPlace" enctype="multipart/form-data">
+                <form method="POST" action="admin.php?page=addPlace" enctype="multipart/form-data">
                     <div class="form-group">
                         <label for="name">Nom du lieux <span class="red">*</span></label>
                         <input type="text" class="form-control" id="name" name="name" placeholder="Entrez le nom du lieu" required>
@@ -67,7 +67,7 @@
                     <th scope="row">{{ place.id }}</th>
                     <td>{{ place.name }}</td>
                     <td><a href="http://{{ place.url }}">{{ place.url }}</a></td>
-                    <td><img src="../../../../web/img/place/{{ place.imgPlace }}" alt="Image du lieux" class="img-list"></td>
+                    <td><img src="../web/img/place/{{ place.imgPlace }}" alt="Image du lieux" class="img-list"></td>
                     <td>{{ place.start|localizeddate('long', 'short', 'fr') }}</td>
                     <td>{{ place.end|localizeddate('long', 'short', 'fr') }}</td>
                     <td>
@@ -90,7 +90,7 @@
                                 <h4 class="modal-title">Modifier un lieux</h4>
                             </div>
                             {% include 'formInfo.html.twig' %}
-                            <form method="POST" action="../../../../admin/admin.php?page=updatePlace" enctype="multipart/form-data">
+                            <form method="POST" action="admin.php?page=updatePlace" enctype="multipart/form-data">
                                 <div class="modal-body">
                                     <div class="form-group">
                                         <label for="name">Nom du lieux <span class="red">*</span></label>
@@ -142,7 +142,7 @@
                                 Êtes-vous sûr de vouloir supprimer le lieu {{ place.name }} ?
                             </div>
                             <div class="modal-footer">
-                                <form method="POST" action="../../../../admin/admin.php?page=deletePlace">
+                                <form method="POST" action="admin.php?page=deletePlace">
                                     <input type="hidden" name="id" value="{{ place.id }}">
                                     <input type="submit" name="submit" class="btn btn-danger" value="Oui">
                                 </form>
