--- a/src/Hph/View/front/base.html.twig
+++ b/src/Hph/View/front/base.html.twig
@@ -9,7 +9,7 @@
     <!-- Bootstrap -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
-    <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../../../../../../../bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="img/global/logo-min.png" rel="icon">
 </head>
