dernières modifs style

--- a/src/Hph/View/front/home.html.twig
+++ b/src/Hph/View/front/home.html.twig
@@ -54,7 +54,7 @@
                     <div class="row visible-sm visible-xs">
                         <div class="col-md-12">
                             <h3 class="font-circula"><i class="fa fa-ticket" aria-hidden="true"></i> Pass 1 Journée ou 2 Jours disponibles</h3>
-                            <a href="../../../../index.php?page=ticket" class="btn btn-primary">Accéder à la Billetterie</a>
+                            <a href="../../../../index.php?page=ticket" class="btn btn-default contact-btn">Accéder à la Billetterie</a>
                         </div>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                             </div>
                         {% endfor %}
                     </div>
-                    <a href="../../../../index.php?page=news" class="btn btn-primary">Voir plus d'actualités</a>
+                    <a href="../../../../index.php?page=news" class="btn btn-default contact-btn">Voir plus d'actualités</a>
                 </div>
             </div>
         </div>
