--- a/src/Hph/View/front/base.html.twig
+++ b/src/Hph/View/front/base.html.twig
@@ -57,11 +57,11 @@
                 <li><a href="../../../../index.php?page=contact">Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right social hidden-xs">
-                <li><a href="#"><i class="fa fa-facebook-square navbar-logo" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-twitter-square navbar-logo" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-instagram navbar-logo" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-spotify navbar-logo" aria-hidden="true"></i></a></li>
-                <li><a href="#"><i class="fa fa-youtube-square navbar-logo" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.facebook.com/hoppophop/"><i class="fa fa-facebook-square navbar-logo" aria-hidden="true"></i></a></li>
+                <li><a href="https://twitter.com/FestivalHPH"><i class="fa fa-twitter-square navbar-logo" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.instagram.com/hoppophop/"><i class="fa fa-instagram navbar-logo" aria-hidden="true"></i></a></li>
+                <li><a href="https://open.spotify.com/user/astrolabe_orleans"><i class="fa fa-spotify navbar-logo" aria-hidden="true"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UCYPwp5OUWAVmKOunbosplJQ"><i class="fa fa-youtube-square navbar-logo" aria-hidden="true"></i></a></li>
             </ul>
         </div>
     </div>
@@ -74,14 +74,32 @@
     <div class="footer-top">
         <div class="container">
             <div class="row text-center">
-                {%  for partner in partners %}
-                    {% if partner.footer == 1 %}
-                        <div class="col-md-4 col-xs-4">
-                            <a href="{{ partner.url }}" class="thumbnail thumbnail-div">
-                                <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
-                            </a>
-                        </div>
-                    {% endif %}
+                {% for partner in partners %}
+                        {% if partners|length == 1 %}
+                            <div class="col-xs-12">
+                                <a href="{{ partner.url }}" class="thumbnail thumbnail-div">
+                                    <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
+                                </a>
+                            </div>
+                        {% elseif partners|length == 2 %}
+                            <div class="col-md-6 col-xs-6">
+                                <a href="{{ partner.url }}" class="thumbnail thumbnail-div">
+                                    <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
+                                </a>
+                            </div>
+                        {% elseif (partners|length == 3) or (partners|length == 5) or (partners|length == 6) %}
+                            <div class="col-md-4 col-xs-4">
+                                <a href="{{ partner.url }}" class="thumbnail thumbnail-div">
+                                    <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
+                                </a>
+                            </div>
+                        {% elseif (partners|length == 4) or (partners|length == 7) or (partners|length == 8) %}
+                            <div class="col-md-3 col-xs-3">
+                                <a href="{{ partner.url }}" class="thumbnail thumbnail-div">
+                                    <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
+                                </a>
+                            </div>
+                        {% endif %}
                 {% endfor %}
             </div>
         </div>
@@ -96,7 +114,7 @@
     <div class="footer-last text-center">
         <p class="footer-legal">
             2017 © L'Astrolabe Orléans - Site Web crée par Sarah, Guillaume, Jason et Quentin de la Wild Code School Orléans
-            <br />
+            <br/>
             <a data-toggle="modal" data-target="#legal">Mentions légales</a>
         </p>
     </div>
