--- a/src/Hph/View/front/partner.html.twig
+++ b/src/Hph/View/front/partner.html.twig
@@ -5,11 +5,11 @@
     <div class="container">
         <h2 class="text-center white font-circula">Partenaires Culturels</h2>
         <div class="row">
-            {%  for partner in partners %}
-                {% if partner.type == 'culturel' %}
+            {%  for partenaire in partenaires %}
+                {% if partenaire.type == 'culturel' %}
                     <div class="col-md-4 col-xs-4">
-                        <a href="{{ partner.url }}" class="thumbnail thumbnail-div partnair-logo">
-                            <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
+                        <a href="{{ partenaire.url }}" class="thumbnail thumbnail-div partnair-logo">
+                            <img src="/web/img/partner/{{ partenaire.imgPartner }}" class="img-responsive">
                         </a>
                     </div>
                 {% endif %}
@@ -18,11 +18,11 @@
         <hr class="hr">
         <h2 class="text-center white font-circula">Partenaires Institutionnels</h2>
         <div class="row">
-            {%  for partner in partners %}
-                {% if partner.type == 'institutionnels' %}
+            {%  for partenaire in partenaires %}
+                {% if partenaire.type == 'institutionnels' %}
                     <div class="col-md-4 col-xs-4">
-                        <a href="{{ partner.url }}" class="thumbnail thumbnail-div partnair-logo">
-                            <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
+                        <a href="{{ partenaire.url }}" class="thumbnail thumbnail-div partnair-logo">
+                            <img src="/web/img/partner/{{ partenaire.imgPartner }}" class="img-responsive">
                         </a>
                     </div>
                 {% endif %}
@@ -31,11 +31,11 @@
         <hr class="hr">
         <h2 class="text-center white font-circula">Partenaires Médiatiques</h2>
         <div class="row">
-            {%  for partner in partners %}
-                {% if partner.type == 'média' %}
+            {%  for partenaire in partenaires %}
+                {% if partenaire.type == 'média' %}
                     <div class="col-md-4 col-xs-4">
-                        <a href="{{ partner.url }}" class="thumbnail thumbnail-div partnair-logo">
-                            <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
+                        <a href="{{ partenaire.url }}" class="thumbnail thumbnail-div partnair-logo">
+                            <img src="/web/img/partner/{{ partenaire.imgPartner }}" class="img-responsive">
                         </a>
                     </div>
                 {% endif %}
@@ -44,11 +44,11 @@
         <hr class="hr">
         <h2 class="text-center white font-circula">Partenaires Privés</h2>
         <div class="row">
-            {%  for partner in partners %}
-                {% if partner.type == 'privé' %}
+            {%  for partenaire in partenaires %}
+                {% if partenaire.type == 'privé' %}
                     <div class="col-md-4 col-xs-4">
-                        <a href="{{ partner.url }}" class="thumbnail thumbnail-div partnair-logo">
-                            <img src="/web/img/partner/{{ partner.imgPartner }}" class="img-responsive">
+                        <a href="{{ partenaire.url }}" class="thumbnail thumbnail-div partnair-logo">
+                            <img src="/web/img/partner/{{ partenaire.imgPartner }}" class="img-responsive">
                         </a>
                     </div>
                 {% endif %}
