--- a/web/css/style.css
+++ b/web/css/style.css
@@ -14,17 +14,30 @@ body {
     margin-top: -25px;
     padding: 25px;
 }
-
-@media (max-width: 1440px) {
+@media (max-width: 1110px) {
+    .routes {
+        background: none;
+    }
+}
+@media (min-width: 1100px) and (max-width: 1640px) {
     .container {
         padding-left: 10%;
         padding-right: 10%;
     }
 }
+@media (min-width: 1200px) and (max-width: 1295px) {
+    .container {
+        padding-right: 15%;
+    }
 
-@media (max-width: 1110px) {
-    .routes {
-        background: none;
+    .content-div p  {
+        text-shadow: 1px 1px 0px black;
+    }
+}
+@media (min-width: 1640px){
+    .container {
+        padding-left: 0%;
+        padding-right: 0%;
     }
 }
 
@@ -85,21 +98,11 @@ body {
     border: 2.5px solid rgba(237, 122, 33, 1);
     width: 50%;
 }
-
-@media (max-width: 1110px) {
-    .separator-title {
-        font-size: 11vw;
-        color: white;
-        text-align: center;
-    }
-}
-
-@media (min-width: 1110px) {
-    .separator-title {
+.separator-title {
         font-size: 7.5vw;
         color: white;
-    }
 }
+@media(ma)
 
 .title {
     color: white;
@@ -112,6 +115,7 @@ body {
 .thumbnail-div {
     background-color: transparent;
     border: none;
+    margin-bottom: 20%;
 }
 
 .thumbnail-title {
@@ -535,6 +539,10 @@ a:hover {
     margin-top: 0;
     background-color: #18252e;
     padding-top: 0;
+    width: 100%;
+    padding-bottom: 0;
+    margin-bottom: 0;
+    position: absolute;
 }
 
 .footer-top {
@@ -551,8 +559,9 @@ a:hover {
 }
 
 .footer-last {
-    padding-bottom: 1%;
+    padding-bottom: 150px;
 }
+
 
 @media (max-width: 1110px) {
     .footer-sponsor {
@@ -636,8 +645,12 @@ a:hover {
     font-family: 'Circula-Medium', sans-serif;
     font-size: 24px;
     color: white;
-    margin: 0 !important;
-    padding: 0 !important;
+}
+.info-text2{
+    font-family: 'Circula-Medium', sans-serif;
+    font-size: 24px;
+    color: white;
+    padding-bottom: 5%;
 }
 
 .prog-filter a:hover {
