--- a/src/Hph/View/back/base.html.twig
+++ b/src/Hph/View/back/base.html.twig
@@ -18,7 +18,7 @@
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header text-center">
-            <a href="admin.php"><img src="../web/img/global/logo-min.png" class="navbar-brand"></a>
+            <a href="index.php"><img src="../web/img/global/logo-min.png" class="navbar-brand"></a>
             <button type="button" class="navbar-toggle collapsed navbar-burger" data-toggle="collapse" data-target="#navbar-collapsed" aria-expanded="false">
                 <span class="sr-only">Menu</span>
                 <span class="icon-bar"></span>
@@ -28,13 +28,13 @@
         </div>
         <div class="collapse navbar-collapse navbar-menu" id="navbar-collapsed">
             <ul class="nav navbar-nav navbar-list">
-                <li><a href="admin.php?page=artist">Gestion des artistes</a></li>
-                <li><a href="admin.php?page=place">Gestion des lieux</a></li>
-                <li><a href="admin.php?page=concert">Gestion des concerts</a></li>
-                <li><a href="admin.php?page=news">Gestion des actualités</a></li>
-                <li><a href="admin.php?page=food">Gestion des foodtrucks</a></li>
-                <li><a href="admin.php?page=partner">Gestion des partenaires</a></li>
-                <li><a href="admin.php?page=sunday">Gestion des activités</a></li>
+                <li><a href="index.php?page=artist">Gestion des artistes</a></li>
+                <li><a href="index.php?page=place">Gestion des lieux</a></li>
+                <li><a href="index.php?page=concert">Gestion des concerts</a></li>
+                <li><a href="index.php?page=news">Gestion des actualités</a></li>
+                <li><a href="index.php?page=food">Gestion des foodtrucks</a></li>
+                <li><a href="index.php?page=partner">Gestion des partenaires</a></li>
+                <li><a href="index.php?page=sunday">Gestion des activités</a></li>
             </ul>
         </div>
     </div>
