--- a/src/Hph/View/back/dimaorl.html.twig
+++ b/src/Hph/View/back/dimaorl.html.twig
@@ -12,7 +12,7 @@
                 <h2 class="text-center">Ajouter une activité du dimanche</h2>
                 <hr/>
                 {% include 'formInfo.html.twig' %}
-                <form method="POST" action="admin.php?page=addSunday" enctype="multipart/form-data">
+                <form method="POST" action="index.php?page=addSunday" enctype="multipart/form-data">
                     <div class="form-group">
                         <label for="title">Nom de l'activité <span class="red">*</span></label>
                         <input type="text" class="form-control" id="title" name="title" placeholder="Entrez le nom de l'activité" required>
@@ -63,7 +63,7 @@
                                 <h4 class="modal-title">Modifier une activité</h4>
                             </div>
                             {% include 'formInfo.html.twig' %}
-                            <form method="POST" action="admin.php?page=updateSunday" enctype="multipart/form-data">
+                            <form method="POST" action="index.php?page=updateSunday" enctype="multipart/form-data">
                                 <div class="modal-body">
                                     <div class="form-group">
                                         <label for="title">Nom de l'activité <span class="red">*</span></label>
@@ -98,7 +98,7 @@
                                 Êtes-vous sûr de vouloir supprimer l'activité {{ sunday.title }} ?
                             </div>
                             <div class="modal-footer">
-                                <form method="POST" action="admin.php?page=deleteSunday">
+                                <form method="POST" action="index.php?page=deleteSunday">
                                     <input type="hidden" name="id" value="{{ sunday.id }}">
                                     <input type="submit" name="submit" class="btn btn-danger" value="Oui">
                                 </form>
