--- a/src/Hph/View/back/base.html.twig
+++ b/src/Hph/View/back/base.html.twig
@@ -8,17 +8,17 @@
     <title>{% block title %}{% endblock %}</title>
     <!-- Bootstrap -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-    <link rel="stylesheet" href="../web/font-awesome/css/font-awesome.min.css">
-    <link href="../web/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="../web/css/admin.css" rel="stylesheet">
-    <link href="../web/img/global/logo-min.png" rel="icon">
+    <link rel="stylesheet" href="../font-awesome/css/font-awesome.min.css">
+    <link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/admin.css" rel="stylesheet">
+    <link href="../img/global/logo-min.png" rel="icon">
 
 </head>
 <body>
 <nav class="navbar navbar-default">
     <div class="container-fluid">
         <div class="navbar-header text-center">
-            <a href="index.php"><img src="../web/img/global/logo-min.png" class="navbar-brand"></a>
+            <a href="index.php"><img src="../img/global/logo-min.png" class="navbar-brand"></a>
             <button type="button" class="navbar-toggle collapsed navbar-burger" data-toggle="collapse" data-target="#navbar-collapsed" aria-expanded="false">
                 <span class="sr-only">Menu</span>
                 <span class="icon-bar"></span>
@@ -42,8 +42,8 @@
 {% block content %}
 
 {% endblock %}
-<script src="../web/js/jquery-3.1.1.min.js"></script>
-<script src="../web/bootstrap/js/bootstrap.min.js"></script>
-<script src="../web/js/script.js"></script>
+<script src="../js/jquery-3.1.1.min.js"></script>
+<script src="../bootstrap/js/bootstrap.min.js"></script>
+<script src="../js/script.js"></script>
 </body>
 </html>
