--- a/src/Hph/View/back/base.html.twig
+++ b/src/Hph/View/back/base.html.twig
@@ -28,7 +28,7 @@
         </div>
         <div class="collapse navbar-collapse navbar-menu" id="navbar-collapsed">
             <ul class="nav navbar-nav navbar-list">
-                <li><a href="index.php?page=artistadmin">Gestion des artistes</a></li>
+                <li><a href="index.php?page=artist">Gestion des artistes</a></li>
                 <li><a href="index.php?page=place">Gestion des lieux</a></li>
                 <li><a href="index.php?page=concert">Gestion des concerts</a></li>
                 <li><a href="index.php?page=news">Gestion des actualités</a></li>
