--- a/src/Hph/View/front/programmation.html.twig
+++ b/src/Hph/View/front/programmation.html.twig
@@ -3,32 +3,57 @@
 {% block titleMobile %}PROG'{% endblock %}
 {% block content %}
     <div class="text-center">
-        <div class="dropdown prog-dropdown">
-            <button class="btn btn-default dropdown-toggle filter-btn font-circula" type="button" id="filter-places" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Lieux <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="filter-places">
-                {% for place in places %}
-                    <li>
-                        <a href="../../../../index.php?page=programmation&place_id={{ place.id }}" class="font-circula">{{ place.name }}</a>
-                    </li>
-                {% endfor %}
-            </ul>
-        </div>
-        <div class="dropdown prog-dropdown">
-            <button class="btn btn-default dropdown-toggle filter-btn font-circula" type="button" id="filter-days" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Soirs <span class="caret"></span>
-            </button>
-            <ul class="dropdown-menu" aria-labelledby="filter-days">
-                <li><a href="../../../../index.php?page=programmation&day=15" class="font-circula">Vendredi Soir</a></li>
-                <li><a href="../../../../index.php?page=programmation&day=16" class="font-circula">Samedi Soir</a></li>
-            </ul>
-        </div>
-        <div class="dropdown prog-dropdown">
-            <button class="btn btn-default dropdown-toggle filter-btn font-circula" type="button" id="filter-local" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Groupes Locaux <span class="caret"></span></button>
-            <ul class="dropdown-menu" aria-labelledby="filter-local">
-                <li><a href="../../../../index.php?page=programmation&lcl=1" class="font-circula">Oui</a></li>
-                <li><a href="../../../../index.php?page=programmation&lcl=0" class="font-circula">Non</a></li>
-            </ul>
-        </div>
+        <form action="index.php" method="get">
+            <div class="dropdown prog-dropdown">
+                <select name="lieux">
+                    <option value="-1" {% if -1 == lieuSelected %}selected="selected"{% endif %}>Lieux</option>
+                    {% for place in places %}
+                        <option value="{{ place.id }}" {% if place.id == lieuSelected %}selected="selected"{% endif %}>{{ place.name }}</option>
+                    {% endfor %}
+                </select>
+                {#
+                <button class="btn btn-default dropdown-toggle filter-btn font-circula" type="button" id="filter-places" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Lieux <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="filter-places">
+                    {% for place in places %}
+                        <li>
+                            <a href="../../../../index.php?page=programmation&place_id={{ place.id }}" class="font-circula">{{ place.name }}</a>
+                        </li>
+                    {% endfor %}
+                </ul>
+                #}
+            </div>
+            <div class="dropdown prog-dropdown">
+                <select name="day">
+                    <option value="15" {% if 15 == soirSelected %}selected="selected"{% endif %}>Vendredi Soir</option>
+                    <option value="16" {% if 16 == soirSelected %}selected="selected"{% endif %}>Samedi Soir</option>
+                </select>
+                {#
+                <button class="btn btn-default dropdown-toggle filter-btn font-circula" type="button" id="filter-days" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Soirs <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="filter-days">
+                    <li><a href="../../../../index.php?page=programmation&day=15" class="font-circula">Vendredi Soir</a></li>
+                    <li><a href="../../../../index.php?page=programmation&day=16" class="font-circula">Samedi Soir</a></li>
+                </ul>
+                #}
+            </div>
+            <div class="dropdown prog-dropdown">
+                <select name="lcl">
+                    <option value="-1" {% if -1 == localSelected %}selected="selected"{% endif %}>Local</option>
+                    <option value="1" {% if 1 == localSelected %}selected="selected"{% endif %}>Oui</option>
+                    <option value="0" {% if 0 == localSelected %}selected="selected"{% endif %}>Non</option>
+                </select>
+                {#
+                <button class="btn btn-default dropdown-toggle filter-btn font-circula" type="button" id="filter-local" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">Groupes Locaux <span class="caret"></span></button>
+                <ul class="dropdown-menu" aria-labelledby="filter-local">
+                    <li><a href="../../../../index.php?page=programmation&lcl=1" class="font-circula">Oui</a></li>
+                    <li><a href="../../../../index.php?page=programmation&lcl=0" class="font-circula">Non</a></li>
+                </ul>
+                #}
+            </div>
+            <input type="hidden" name="page" value="programmation" />
+            <input type="submit" name="btnSubmitSearch" Value="Rechercher" />
+        </form>
     </div>
     <div class="container">
         <hr class="hr">
@@ -37,7 +62,7 @@
                 <div class="col-md-3 col-sm-6">
                     <a href="../../../../index.php?page=artist&id={{ artist.artist_id }}">
                         <div class="thumbnail thumbnail-div prog-artist text-center">
-                            <img src="../../../web/img/artist/{{ artist.imgArtist }}" class="img-responsive {% if artist.status == 'canceled' %}img-cancel{% endif %}">
+                            <img src="../../../web/img/artist/{{ artist.img_artist }}" class="img-responsive {% if artist.status == 'canceled' %}img-cancel{% endif %}">
                             <div class="content-div prog-info text-center">
                                 <p class="info-text">{{ artist.name }}</p>
                                 <hr class="hr-min">
